first line graph with temp data

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "@angular/router": "^14.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.0.0",
     "@popperjs/core": "^2.10.2",
+    "@riapacheco/yutes": "^4.2.4",
     "ajv": "8.11.0",
     "arrive": "2.4.1",
     "bootstrap": "^5.2.0",
@@ -44,6 +45,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
     "moment": "2.29.1",
+    "ng2-charts": "^3.1.0",
     "ngx-toastr": "^14.0.0",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
