--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,16 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    compileOnly('jakarta.ws.rs:jakarta.ws.rs-api:3.0.0')
+    compileOnly 'jakarta.ws.rs:jakarta.ws.rs-api:3.0.0'
     implementation 'org.jboss.resteasy:resteasy-core:6.2.1.Final'
     implementation 'org.jboss.resteasy:resteasy-client:6.2.1.Final'
-    implementation 'org.jboss.resteasy:resteasy-jaxb-provider:6.2.1.Final'
+    implementation 'org.jboss.resteasy:resteasy-jackson2-provider:6.2.1.Final'
     implementation 'org.jboss.resteasy:resteasy-servlet-initializer:6.2.1.Final'
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.3'
+    implementation 'com.opencsv:opencsv:5.5.2'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
 
 task buildFrontend(type: Exec) {
