--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'org.jboss.resteasy:resteasy-core:6.2.1.Final'
     implementation 'org.jboss.resteasy:resteasy-client:6.2.1.Final'
     implementation 'org.jboss.resteasy:resteasy-jackson2-provider:6.2.1.Final'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'org.jboss.resteasy:resteasy-servlet-initializer:6.2.1.Final'
     implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.3'
     implementation 'com.opencsv:opencsv:5.5.2'
